# echo-notifier

./: .gitignore  AGENTS.md  App.js  CLAUDE.md  LICENSE  Makefile  README.md  app.json  echo.py  package-lock.json  package.json  pyproject.toml
.commandcode/taste/: taste.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: main.py  train_model.py
cli_notifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_echo.py  test_notify.py
