[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-notifier"
version = "2.0.0"
description = "echo-notifier — push notifikasi ke HP via Telegram saat AI agent selesai task"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "dinarradja"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "certifi>=2024.0.0",
]

[project.scripts]
echon = "echo:main"

[tool.setuptools]
py-modules = ["echo"]
